--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </main>
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./assets/script.js"></script>
+    <script src="./Assets/script.js"></script>
 
 
 </body>
